# stock_compare

./: KNN.ipynb  KNN_model.h5  KNN_model.keras  Random Forest.ipynb  app.py  pyproject.toml  random_forest_model.h5  random_forest_model.keras  streamlit_app.py
