[tool.poetry]
name = "stock-compare"
version = "0.1.0"
description = ""
authors = ["Carlos Paiva <carlospaiva87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "4.25.3"
yfinance = "^0.2.37"
pandas = "^2.2.1"
numpy = "^1.26.4"
streamlit = "^1.32.2"
scikit-learn = "^1.4.1.post1"
plotly = "^5.20.0"
keras = "^3.1.1"
requests = "^2.31.0"
tensorflow = "^2.16.1"
ipython = "^8.22.2"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
nbformat = "^5.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
